--- a/VouchersTests/VouchersTests.csproj
+++ b/VouchersTests/VouchersTests.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
     <PackageReference Include="FluentAssertions" Version="6.9.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="7.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="xunit" Version="2.4.2" />
@@ -27,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AccountingVoucher.Application\AccountingVoucher.Application.csproj" />
+    <ProjectReference Include="..\AccountingVoucher.Infrastructure\AccountingVoucher.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
